--- a/Assets/style.css
+++ b/Assets/style.css
@@ -41,7 +41,7 @@ header ul li a:hover {
     font-size: 30px;
 }
 /* Hero Style */
-hero{
+.hero{
     background-color: var(--light);
     padding: 20 60px;
     color: var(--blue);
@@ -60,11 +60,11 @@ hero{
     align-items: flex-start;
 }
 
-hero h1{
+section h1{
     font-size: 70px;
 }
 
-hero p{
+section p{
     font-size:25px;
     line-height: 1.5;
 }
@@ -81,9 +81,34 @@ hero p{
     height:100%;
 }
 
+/* Portfolio Style */
+.portfolio{
+    background-color: var(--blue);
+    color: var(--light);
+}
+
+.container_port{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: 50px;
+}
+
+.main_port{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.portimg{
+    padding-top: 30px;
+    height: 100%;
+    width: 80%;
+}
+
+
 /* Responsive Section */
+/* Hero section */
 @media screen and (max-width: 1200px) {
-    hero{
+    .hero{
         padding: 40px;
     }
     
@@ -91,7 +116,7 @@ hero p{
         grid-template-columns: 1fr;
     }
 
-    hero h1{
+    section h1{
         font-size: 65px;
     }
 
@@ -99,15 +124,29 @@ hero p{
         width:80%;
         height:100%;
     }
+    .container_port{
+        padding: 40px;
+    }
+    .main_port{
+        grid-template-columns: 1fr;
+    }
+    .portimg{
+        width: 100%;
+        height: 100%;
+    }
 }
+
+
 
 @media screen and (max-width:670px) {
-wrapper{
+.wrapper{
     grid-template-columns: 700px;
 }
-.hero h1{
+section h1{
     font-size: 45px;
 }
-    
+.heroimg{
+    width: 60%;
+    height:100%;
 }
-
+}
